fixed some features that weren't really working on mobile, and added an arrow to show that you're able to scroll down

--- a/styles/sections.css
+++ b/styles/sections.css
@@ -62,7 +62,7 @@
   border: 3px solid #375e5d;
   font-family: "Figtree", sans-serif;
   font-weight: 700;
-  font-size: 1.1em;
+  font-size: 1.1rem;
   background: #3e8381;
   cursor: pointer;
   border-radius: 20px;
